# meta-ads-knowledge

./: .gitignore  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_PLAYBOOK.md  LICENSE  MCP_COMPATIBILITY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
analytics/: README.md  creative_analysis.py  fatigue_curve.py  meta_client.py  requirements.txt  significance_test.py
analytics/sample_data/: sample_daily.csv  sample_insights.csv
creatives/: README.md  generate_creative.py  host_image.py  requirements.txt  to_data_url.py
knowledge/: 01_structure.md  02_audiences.md  03_creatives.md  04_optimization.md  05_pixel_and_coldstart.md  06_geo_currency.md  07_creative_pipeline_and_existing_posts.md  08_benchmarks_us_europe.md
templates/: COMMS_STRATEGY_TEMPLATE.md
tests/: conftest.py  test_creative_analysis.py  test_fatigue.py  test_meta_client.py  test_significance.py
